force-app/main/default/objects/User__x/fields/Next_Quarter_Renew_Goal_Formula_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Quarter_Renew_Goal_Formula_c__c</fullName>
    <externalDeveloperName>Next_Quarter_Renew_Goal_Formula__c</externalDeveloperName>
    <label>Next Quarter Renew Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>