force-app/main/default/objects/User__x/fields/Nov_Rnwl_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Nov_Rnwl_Goal_c__c</fullName>
    <externalDeveloperName>Nov_Rnwl_Goal__c</externalDeveloperName>
    <label>Nov Rnwl Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>