force-app/main/default/objects/User__x/fields/Oct_Rnwl_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Oct_Rnwl_Goal_c__c</fullName>
    <externalDeveloperName>Oct_Rnwl_Goal__c</externalDeveloperName>
    <label>Oct Rnwl Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>