force-app/main/default/objects/User__x/fields/Oct_Total_Goal_Calc_c__c.field-meta.xml
<CustomField>
    <fullName>Oct_Total_Goal_Calc_c__c</fullName>
    <externalDeveloperName>Oct_Total_Goal_Calc__c</externalDeveloperName>
    <label>Oct Total Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>