force-app/main/default/objects/User__x/fields/Operations_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Operations_Group_c__c</fullName>
    <externalDeveloperName>Operations_Group__c</externalDeveloperName>
    <label>Operations Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas BI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>