force-app/main/default/objects/User__x/fields/OutOfOfficeMessage__c.field-meta.xml
<CustomField>
    <fullName>OutOfOfficeMessage__c</fullName>
    <externalDeveloperName>OutOfOfficeMessage</externalDeveloperName>
    <label>Out of office message</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>