force-app/main/default/objects/User__x/fields/Pipeline_Creation_Monthly_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Creation_Monthly_Goal_c__c</fullName>
    <externalDeveloperName>Pipeline_Creation_Monthly_Goal__c</externalDeveloperName>
    <label>Pipeline Creation Monthly Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>