force-app/main/default/objects/User__x/fields/RDOS_Name_c__c.field-meta.xml
<CustomField>
    <fullName>RDOS_Name_c__c</fullName>
    <externalDeveloperName>RDOS_Name__c</externalDeveloperName>
    <label>RDOS Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>