force-app/main/default/objects/User__x/fields/RDOSname_c__c.field-meta.xml
<CustomField>
    <fullName>RDOSname_c__c</fullName>
    <externalDeveloperName>RDOSname__c</externalDeveloperName>
    <label>RDOSname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>