force-app/main/default/objects/User__x/fields/SFDC_Training_Date_c__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Training_Date_c__c</fullName>
    <externalDeveloperName>SFDC_Training_Date__c</externalDeveloperName>
    <inlineHelpText>Date SFDC training completed</inlineHelpText>
    <label>SFDC Training Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>