force-app/main/default/objects/User__x/fields/Special_Permissions_c__c.field-meta.xml
<CustomField>
    <fullName>Special_Permissions_c__c</fullName>
    <externalDeveloperName>Special_Permissions__c</externalDeveloperName>
    <label>Special Permissions</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Contract-Credit Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>