force-app/main/default/objects/User__x/fields/System_User_c__c.field-meta.xml
<CustomField>
    <fullName>System_User_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>System_User__c</externalDeveloperName>
    <inlineHelpText>Check if user is system user like integration user</inlineHelpText>
    <label>System User</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>