force-app/main/default/objects/User__x/fields/Title_c__c.field-meta.xml
<CustomField>
    <fullName>Title_c__c</fullName>
    <externalDeveloperName>Title__c</externalDeveloperName>
    <inlineHelpText>This field is used for P2G hierarchy purposes.</inlineHelpText>
    <label>Title*</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEC</fullName>
            </value>
            <value>
                <fullName>DEC &amp; DOM</fullName>
            </value>
            <value>
                <fullName>DOD</fullName>
            </value>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
            <value>
                <fullName>EDOS</fullName>
            </value>
            <value>
                <fullName>EVP</fullName>
            </value>
            <value>
                <fullName>ISR</fullName>
            </value>
            <value>
                <fullName>Media Specialist</fullName>
            </value>
            <value>
                <fullName>RDOS</fullName>
            </value>
            <value>
                <fullName>Renewal Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Strategic Sales</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>