force-app/main/default/objects/User__x/fields/User_Type_c__c.field-meta.xml
<CustomField>
    <fullName>User_Type_c__c</fullName>
    <externalDeveloperName>User_Type__c</externalDeveloperName>
    <label>User Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integration User</fullName>
            </value>
            <value>
                <fullName>Data User</fullName>
            </value>
            <value>
                <fullName>Sales Placeholder</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>