force-app/main/default/objects/User__x/fields/UserPermissionsSFContentUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsSFContentUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsSFContentUser</externalDeveloperName>
    <label>Salesforce CRM Content User</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>