force-app/main/default/objects/User__x/fields/UserPreferencesDisableChangeCommentEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableChangeCommentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableChangeCommentEmail</externalDeveloperName>
    <label>DisableChangeCommentEmail</label>
    <type>Checkbox</type>
</CustomField>