force-app/main/default/objects/User__x/fields/UserPreferencesDisableFileShareNotificat__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableFileShareNotificat__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableFileShareNotificationsForApi</externalDeveloperName>
    <label>DisableFileShareNotificationsForApi</label>
    <type>Checkbox</type>
</CustomField>