force-app/main/default/objects/User__x/fields/UserPreferencesDisableFollowersEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableFollowersEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableFollowersEmail</externalDeveloperName>
    <label>DisableFollowersEmail</label>
    <type>Checkbox</type>
</CustomField>