force-app/main/default/objects/User__x/fields/UserPreferencesDisableLaterCommentEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableLaterCommentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableLaterCommentEmail</externalDeveloperName>
    <label>DisableLaterCommentEmail</label>
    <type>Checkbox</type>
</CustomField>