force-app/main/default/objects/User__x/fields/UserPreferencesDisableProfilePostEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableProfilePostEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableProfilePostEmail</externalDeveloperName>
    <label>DisableProfilePostEmail</label>
    <type>Checkbox</type>
</CustomField>