force-app/main/default/objects/User__x/fields/UserPreferencesDisableSharePostEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableSharePostEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableSharePostEmail</externalDeveloperName>
    <label>DisableSharePostEmail</label>
    <type>Checkbox</type>
</CustomField>