force-app/main/default/objects/User__x/fields/UserPreferencesDisCommentAfterLikeEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisCommentAfterLikeEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisCommentAfterLikeEmail</externalDeveloperName>
    <label>DisCommentAfterLikeEmail</label>
    <type>Checkbox</type>
</CustomField>