force-app/main/default/objects/User__x/fields/UserPreferencesDisMentionsCommentEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisMentionsCommentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisMentionsCommentEmail</externalDeveloperName>
    <label>DisMentionsCommentEmail</label>
    <type>Checkbox</type>
</CustomField>