force-app/main/default/objects/User__x/fields/UserPreferencesEnableAutoSubForFeeds__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesEnableAutoSubForFeeds__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesEnableAutoSubForFeeds</externalDeveloperName>
    <label>EnableAutoSubForFeeds</label>
    <type>Checkbox</type>
</CustomField>