force-app/main/default/objects/User__x/fields/UserPreferencesExcludeMailAppAttachments__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesExcludeMailAppAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesExcludeMailAppAttachments</externalDeveloperName>
    <label>ExcludeMailAppAttachments</label>
    <type>Checkbox</type>
</CustomField>