force-app/main/default/objects/User__x/fields/UserPreferencesFavoritesShowTopFavorites__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesFavoritesShowTopFavorites__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesFavoritesShowTopFavorites</externalDeveloperName>
    <label>FavoritesShowTopFavorites</label>
    <type>Checkbox</type>
</CustomField>