force-app/main/default/objects/User__x/fields/UserPreferencesFavoritesWTShown__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesFavoritesWTShown__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesFavoritesWTShown</externalDeveloperName>
    <label>FavoritesWTShown</label>
    <type>Checkbox</type>
</CustomField>