force-app/main/default/objects/User__x/fields/UserPreferencesHasCelebrationBadge__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHasCelebrationBadge__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHasCelebrationBadge</externalDeveloperName>
    <label>HasCelebrationBadge</label>
    <type>Checkbox</type>
</CustomField>