force-app/main/default/objects/User__x/fields/UserPreferencesNewLightningReportRunPage__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesNewLightningReportRunPage__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesNewLightningReportRunPageEnabled</externalDeveloperName>
    <label>NewLightningReportRunPageEnabled</label>
    <type>Checkbox</type>
</CustomField>