force-app/main/default/objects/User__x/fields/UserPreferencesPipelineViewHideHelpPopov__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesPipelineViewHideHelpPopov__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesPipelineViewHideHelpPopover</externalDeveloperName>
    <label>PipelineViewHideHelpPopover</label>
    <type>Checkbox</type>
</CustomField>