force-app/main/default/objects/User__x/fields/UserPreferencesPreviewCustomTheme__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesPreviewCustomTheme__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesPreviewCustomTheme</externalDeveloperName>
    <label>PreviewCustomTheme</label>
    <type>Checkbox</type>
</CustomField>