force-app/main/default/objects/User__x/fields/UserPreferencesReceiveNoNotificationsAsA__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesReceiveNoNotificationsAsA__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesReceiveNoNotificationsAsApprover</externalDeveloperName>
    <label>ReceiveNoNotificationsAsApprover</label>
    <type>Checkbox</type>
</CustomField>