force-app/main/default/objects/User__x/fields/UserPreferencesReceiveNotificationsAsDel__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesReceiveNotificationsAsDel__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesReceiveNotificationsAsDelegatedApprover</externalDeveloperName>
    <label>ReceiveNotificationsAsDelegatedApprover</label>
    <type>Checkbox</type>
</CustomField>