force-app/main/default/objects/User__x/fields/UserPreferencesRecordHomeSectionCollapse__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesRecordHomeSectionCollapse__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesRecordHomeSectionCollapseWTShown</externalDeveloperName>
    <label>RecordHomeSectionCollapseWTShown</label>
    <type>Checkbox</type>
</CustomField>