force-app/main/default/objects/User__x/fields/UserPreferencesSortFeedByComment__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesSortFeedByComment__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesSortFeedByComment</externalDeveloperName>
    <label>SortFeedByComment</label>
    <type>Checkbox</type>
</CustomField>