force-app/main/default/objects/User__x/fields/UserPreferencesSRHOverrideActivities__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesSRHOverrideActivities__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesSRHOverrideActivities</externalDeveloperName>
    <label>SRHOverrideActivities</label>
    <type>Checkbox</type>
</CustomField>