force-app/main/default/objects/User__x/fields/UserPreferencesSuppressEventSFXReminders__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesSuppressEventSFXReminders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesSuppressEventSFXReminders</externalDeveloperName>
    <label>SuppressEventSFXReminders</label>
    <type>Checkbox</type>
</CustomField>