force-app/main/default/objects/User__x/fields/UserPreferencesUserDebugModePref__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesUserDebugModePref__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesUserDebugModePref</externalDeveloperName>
    <label>UserDebugModePref</label>
    <type>Checkbox</type>
</CustomField>