force-app/main/default/objects/User__x/fields/YTD_New_Goal_Formula_c__c.field-meta.xml
<CustomField>
    <fullName>YTD_New_Goal_Formula_c__c</fullName>
    <externalDeveloperName>YTD_New_Goal_Formula__c</externalDeveloperName>
    <label>YTD New Goal Formula</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>