force-app/main/default/objects/User__x/fields/YTD_Renewal_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>YTD_Renewal_Goal_c__c</fullName>
    <externalDeveloperName>YTD_Renewal_Goal__c</externalDeveloperName>
    <label>YTD Renewal Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>