force-app/main/default/objects/User__x/fields/YTD_Total_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Goal_c__c</fullName>
    <externalDeveloperName>YTD_Total_Goal__c</externalDeveloperName>
    <label>YTD Total Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>