force-app/main/default/objects/User__x/fields/ZMG_Zoomerang_Security_Token_c__c.field-meta.xml
<CustomField>
    <fullName>ZMG_Zoomerang_Security_Token_c__c</fullName>
    <externalDeveloperName>ZMG__Zoomerang_Security_Token__c</externalDeveloperName>
    <label>Zoomerang Security Token</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>